Alterações para ajustes no mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- HERADER -->
-    <div class="container-fluid bg-black fixed-top">
+    <div class="container-fluid bg-black">
         <header class="row justify-content-center" id="header" >
             <div id="logo-container">
                 <img src="img/DevelopersLogo200×60Final.png" alt="Logo" id="logo">
@@ -42,7 +42,7 @@
         <div class="col-12">
             <h1>Hard skills</h1>
         </div>
-        <div class="row gx-5">
+        <div class="row gx-md-5">
             <div class="col-12 col-md-6">
                 <div class="small-image-container center-image" id="img2"></div>
                     <h3>Front-End</h3>
