--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="row gx-md-5">
             <div class="col-12 col-md-6">
                 <div class="small-image-container center-image" id="img2"></div>
-                    <h3>Front-End</h3>
+                    <h3><i class="bi bi-filetype-html"></i> Front-End</h3>
                     <p class="secundary-color">Treinamentos e habilidades em linguagens para front-end</p>
                     <a href="#" class="btn">Detalhes</a>
                 
@@ -53,7 +53,7 @@
 
             <div class="col-12 col-md-6">
                 <div class="small-image-container center-image" id="img3"></div>
-                    <h3>Back-End</h3>
+                    <h3><i class="bi bi-filetype-js"></i> Back-End</h3>
                     <p class="secundary-color">Treinamentos e habilidades em linguagens para back-end</p>
                     <a href="#" class="btn">Detalhes</a>
 
@@ -61,7 +61,7 @@
 
             <div class="col-12 col-md-6">
                 <div class="small-image-container center-image" id="img4"></div>
-                    <h3>Servidores</h3>
+                    <h3><i class="bi bi-hdd-stack"></i> Servidores</h3>
                     <p class="secundary-color">Treinamentos e habilidades em gerenciamento de Servidores</p>
                     <a href="#" class="btn">Detalhes</a>
  
@@ -69,7 +69,7 @@
 
             <div class="col-12 col-md-6">
                 <div class="small-image-container center-image" id="img5"></div>
-                    <h3>Firewall</h3>
+                    <h3><i class="bi bi-bricks"></i> Firewall</h3>
                     <p class="secundary-color">Treinamentos e habilidades em Criação e configuração de Firewall</p>
                     <a href="#" class="btn">Detalhes</a>
 
@@ -77,7 +77,7 @@
 
             <div class="col-12 col-md-6">
                 <div class="small-image-container center-image" id="img6"></div>
-                    <h3>Hardware</h3>
+                    <h3><i class="bi bi-motherboard"></i> Hardware</h3>
                     <p class="secundary-color">Treinamentos e habilidades em reparo de Hardware de computadores</p>
                     <a href="#" class="btn">Detalhes</a>
 
@@ -85,7 +85,7 @@
 
             <div class="col-12 col-md-6">
                 <div class="small-image-container center-image" id="img7"></div>
-                    <h3>Redes de computadores</h3>
+                    <h3><i class="bi bi-ethernet"></i> Redes de computadores</h3>
                     <p class="secundary-color">Treinamentos e habilidades em redes de computadores</p>
                     <a href="#" class="btn">Detalhes</a>
 
