--- a/index.html
+++ b/index.html
@@ -92,6 +92,70 @@
             </div>
 
         </div>
+
+        <div class="col-12">
+            <h1>Soft Skills</h1>
+        </div>
+        <div class="row gx-md-5">
+            <div class="col-12 col-md-4">
+                <div class="small-image-container center-image" id="img2"></div>
+                    <h3><i class="bi bi-filetype-html"></i> Front-End</h3>
+                    <p class="secundary-color">Treinamentos e habilidades em linguagens para front-end</p>
+                    <a href="#" class="btn">Detalhes</a>
+                
+            </div>
+
+            <div class="col-12 col-md-4">
+                <div class="small-image-container center-image" id="img3"></div>
+                    <h3><i class="bi bi-filetype-js"></i> Back-End</h3>
+                    <p class="secundary-color">Treinamentos e habilidades em linguagens para back-end</p>
+                    <a href="#" class="btn">Detalhes</a>
+
+            </div>
+
+            <div class="col-12 col-md-4">
+                <div class="small-image-container center-image" id="img4"></div>
+                    <h3><i class="bi bi-hdd-stack"></i> Servidores</h3>
+                    <p class="secundary-color">Treinamentos e habilidades em gerenciamento de Servidores</p>
+                    <a href="#" class="btn">Detalhes</a>
+ 
+            </div>
+
+            <div class="col-12 col-md-4">
+                <div class="small-image-container center-image" id="img5"></div>
+                    <h3><i class="bi bi-bricks"></i> Firewall</h3>
+                    <p class="secundary-color">Treinamentos e habilidades em Criação e configuração de Firewall</p>
+                    <a href="#" class="btn">Detalhes</a>
+
+            </div>
+
+            <div class="col-12 col-md-4">
+                <div class="small-image-container center-image" id="img6"></div>
+                    <h3><i class="bi bi-motherboard"></i> Hardware</h3>
+                    <p class="secundary-color">Treinamentos e habilidades em reparo de Hardware de computadores</p>
+                    <a href="#" class="btn">Detalhes</a>
+
+            </div>
+
+            <div class="col-12 col-md-4">
+                <div class="small-image-container center-image" id="img7"></div>
+                    <h3><i class="bi bi-ethernet"></i> Redes de computadores</h3>
+                    <p class="secundary-color">Treinamentos e habilidades em redes de computadores</p>
+                    <a href="#" class="btn">Detalhes</a>
+
+            </div>
+
+        </div>
+
+
+
+
+
+
+
+
+
+        
     </div>
 
     <!-- FOOTER -->
