--- a/template.html
+++ b/template.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/styleMenu.css">
-
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -43,9 +45,27 @@
     <!-- Fim da Barra de Navegação -->
 
     <!-- Principal Banner -->
-<div class="article container teste">
-    teste
-</div>
+<section class="container-fluid">
+
+</section>
+<section class="container" id="services">
+    <h2 class="text-center pt-5">PRESTAÇÃO DE SERVIÇOS</h2>
+    <p>Conheça alguns dos  serviços  que estou apto a oferecer nas mais diversas categorias,<br> desde desenvolvimento web ate infraestrutura.</p>
+    <div class="row col-md-12">
+        <div class="col-md-4">
+            <h3><i class="bi bi-info-circle"></i> SUPORTE</h3>
+            <p>Suporte técnico em informática, reparo e manutenção de computadores e notebooks</p>
+        </div>
+        <div class="col-md-4">
+            <h3><i class="bi bi-hdd-stack"></i> SERVIDORES</h3>
+            <p>Instalação, configuração, manutenção de servidores linux e windows</p>
+        </div>
+        <div class="col-md-4">
+            <h3><i class="bi bi-braces"></i> DEVELOPER</h3>
+            <p>Criação de sites com a mais moderna tecnologia em plataformas web do mercado.</p>
+        </div>
+    </div>
+</section>
 
 
 
@@ -56,9 +76,7 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
